[package]
name = "capnez-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
capnez-codegen= { git = "https://github.com/0xWOLAND/capnez" }
capnez-macros = { git = "https://github.com/0xWOLAND/capnez" }
capnp = "0.21.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
capnez-codegen = { git = "https://github.com/0xWOLAND/capnez" }
